# abogados-mvp

./: pyproject.toml  requirements.txt
src/abogados/: abogados.csv  main.py
